[package]
name = "tmux-reactor-ai"
version = "0.1.0"
edition = "2024"
description = "A tmux reactor daemon for AI-generated titles, status values, and arbitrary tmux string targets."
license = "MIT OR Apache-2.0"
repository = "https://github.com/ramarivera/tmux-ReactorAI"

[dependencies]
anyhow = "1.0.100"
async-trait = "0.1.89"
clap = { version = "4.5.53", features = ["derive", "env"] }
regex = "1.12.2"
rig-core = "0.38.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.147"
serde_yaml = "0.9.34"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["macros", "process", "rt-multi-thread", "time"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "json"] }

[dev-dependencies]
assert_cmd = "2.1.1"
predicates = "3.1.3"
proptest = "1.11.0"
tempfile = "3.23.0"
